// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`test parsing a minting transaction 1`] = `
MinterDefinitionTransaction {
  "blockHeight": 210,
  "blockId": undefined,
  "blockTime": undefined,
  "id": "88fa9fa6f27693c11805c4a7d9272d7c3b299f0707aca7a887af24c002245b7e",
  "minterDefinitionCondition": UnlockhashCondition {
    "type": 1,
    "unlockhash": "01370af706b547dd4e562a047e6265d7e7750771f9bff633b1a12dbd59b11712c6ef65edb1690d",
  },
  "minterDefinitionFulfillment": SingleSignatureFulfillment {
    "publicKey": "ed25519:d285f92d6d449d9abb27f4c6cf82713cec0696d62b8c123f1627e054dc6d7780",
    "signature": "f1ac9601b255b251d76e1629e6f659e35b42539faecb7c041cb42ac678e1a52594170e3664f9e2515c703af143b3609c1f01c1bf4c5ae49a0b5a2cf2f751d60d",
    "type": 1,
  },
  "unconfirmed": false,
  "version": 128,
}
`;

exports[`test parsing a minting transaction 2`] = `
CoinCreationTransaction {
  "blockHeight": 116,
  "blockId": undefined,
  "blockTime": undefined,
  "coinCreationFulfillment": SingleSignatureFulfillment {
    "publicKey": "ed25519:d285f92d6d449d9abb27f4c6cf82713cec0696d62b8c123f1627e054dc6d7780",
    "signature": "bcbb65c9bff884962548063fdfd0003d5a4ee166de3b33fa60baf066ebb5c8f4afe7af6320722726077d6f84045c617352d584c18f1325ca3d9bdd2e6f3c1d0e",
    "type": 1,
  },
  "coinCreationOutputs": Array [
    Object {
      "condition": UnlockhashCondition {
        "type": 1,
        "unlockhash": "01f68299b26a89efdb4351a61c3a062321d23edbc1399c8499947c1313375609adbbcd3977363c",
      },
      "id": "eb645b0bb8d43e376c766a51ac2e77593f791752f4255dc2c73587d7225f2495",
      "value": "100",
    },
  ],
  "id": "589236cc9d800884d1270b627c3b4d3da9e12e330c763f20d4e4dd841730810b",
  "unconfirmed": false,
  "version": 129,
}
`;

exports[`test parsing a spent atomic swap coin output id 1`] = `
CoinOutputInfo {
  "input": Object {
    "fulfillment": AtomicSwapFulfillment {
      "publicKey": "ed25519:0057bbe7d51abdaedb1c31a2f1b3b12b3c47bdf2c31b94d248561da244fbb7da",
      "secret": "5486225923792fd14b2e31317381154fba96e6c88f7cc6e7dd758b3c8d26c642",
      "signature": "83e1e1225a292c42f038d2c9061969c334520ad06d45c4aa48167ebcce72eab3197cb6a7b6373d30d026dfdda50937967f0c0437dd93d15252f22819dcbbec09",
      "type": 1,
    },
    "parentOutput": Object {
      "condition": AtomicSwapCondition {
        "contractAddress": "01a75b03da048b933d2d04cc22283c170eb8300f1806b02bf7138f4092a3a385703864e427d165",
        "hashedSecret": "322382392c5c402321a0507c9a8fce1c2599e72b631eff4f207104e4f225acfd",
        "receiver": "01a75b03da048b933d2d04cc22283c170eb8300f1806b02bf7138f4092a3a385703864e427d165",
        "sender": "01d8a5b1f0e92d5c333b8368189c8e09c4e7aea7e7186967035242c6ee94bfa8f9cf19725d5e96",
        "timelock": 1532177577,
        "type": 2,
      },
      "id": "ba258e081b5bc7ab879f51be2715135cd166900a07ac5dc7ef3330ed45776206",
      "value": "25000",
    },
    "parentid": "19c162756112c6d950593c8d740999d976a9743390415ee870104f336551d73c",
    "txId": "e3d4558124736231f79df3c1c1df36c737002d6c10b1097cc098ce19273d3e12",
  },
  "output": Object {
    "condition": AtomicSwapCondition {
      "contractAddress": "02ed044fa056e6fda24261628576d61f7ed580a649496a582ac0691f90f4ef89002a1a5f368c57",
      "hashedSecret": "322382392c5c402321a0507c9a8fce1c2599e72b631eff4f207104e4f225acfd",
      "receiver": "01a75b03da048b933d2d04cc22283c170eb8300f1806b02bf7138f4092a3a385703864e427d165",
      "sender": "01d8a5b1f0e92d5c333b8368189c8e09c4e7aea7e7186967035242c6ee94bfa8f9cf19725d5e96",
      "timelock": 1532177577,
      "type": 2,
    },
    "id": "19c162756112c6d950593c8d740999d976a9743390415ee870104f336551d73c",
    "txId": "37e2ffea404d5dd053e952a06182552c7b3a9d5ee672dd2501ebd0c868c9f215",
    "value": "25000",
  },
}
`;

exports[`test parsing a spent coin output id 1`] = `
CoinOutputInfo {
  "input": Object {
    "fulfillment": SingleSignatureFulfillment {
      "publicKey": "ed25519:47c54e33cdfa770f2180af660d27881d1dbc544b37a4233390af603162c7433d",
      "signature": "b16cdc4ff45bf58188c570ca858785a7be8a85be878322399721f89bb44cad94070411c9999eeb9eaafe8a26c6ea94532c3f9d5a2a995536e55e66b2dda0f605",
      "type": 1,
    },
    "parentOutput": Object {
      "condition": UnlockhashCondition {
        "type": 1,
        "unlockhash": "01fc8714235d549f890f35e52d745b9eeeee34926f96c4b9ef1689832f338d9349b453898f7e51",
      },
      "id": "d3001eb50f765a4cf0c2b3eea99680f87cd46db7795aa7fb51131a320fe786b9",
      "value": "100000000",
    },
    "parentid": "6321aecd61aa7ae6d37e611a9e3d3eba898b752789df2b559dcca5b11429ca4b",
    "txId": "8b13271e8b67961d066a80b1964bcb7e251d178e607e94b9992a76bc0d172647",
  },
  "output": Object {
    "condition": UnlockhashCondition {
      "type": 1,
      "unlockhash": "01fc8714235d549f890f35e52d745b9eeeee34926f96c4b9ef1689832f338d9349b453898f7e51",
    },
    "id": "6321aecd61aa7ae6d37e611a9e3d3eba898b752789df2b559dcca5b11429ca4b",
    "txId": "10e6de771da2d2030cbfcfa84a0be36081d2d8eb376c9cd8dfc22aa589662541",
    "value": "100000000",
  },
}
`;

exports[`test parsing a spent coin output id for blockcreator 1`] = `
CoinOutputInfo {
  "input": Object {
    "fulfillment": SingleSignatureFulfillment {
      "publicKey": "ed25519:5bb0b087153c906fb0728b10d0336816cf20b51540924ed99f4093b364092880",
      "signature": "c23082244d8982abcd9dc49b0b1ccc7ad7c4aa6b29c7f99548aad6f6c6e460074aca2fd8fad12081e2889ba07c2cd65b8e9e7a5168d897c685fd70950f951802",
      "type": 1,
    },
    "parentOutput": Object {
      "condition": UnlockhashCondition {
        "type": 1,
        "unlockhash": "01bd7048f40168df7d837fd398bcffdf2d69d992ef53bd1677570d373ba378edea8a72317cf336",
      },
      "id": undefined,
      "value": "10",
    },
    "parentid": "3559a1efb6b2f14edd1c885d61068979e56dc66cd8861d98a9ba77e54453d434",
    "txId": "6a63cd6e6f680ed5d02d7eae8539664bb59ab94c09d055f4be65bde5930fab2e",
  },
  "output": Object {
    "blockId": "005eb62e4ff226d4cfa17b125352f85a61146b8b909804052d0cad2fde0c822b",
    "id": "3559a1efb6b2f14edd1c885d61068979e56dc66cd8861d98a9ba77e54453d434",
    "isBlockCreatorReward": true,
    "unlockhash": "01bd7048f40168df7d837fd398bcffdf2d69d992ef53bd1677570d373ba378edea8a72317cf336",
    "value": "10",
  },
}
`;

exports[`test parsing an atomic swap contract address 1`] = `
Wallet {
  "address": "02ed044fa056e6fda24261628576d61f7ed580a649496a582ac0691f90f4ef89002a1a5f368c57",
  "coinOutputs": Array [
    Object {
      "blockHeight": 73623,
      "condition": AtomicSwapCondition {
        "contractAddress": undefined,
        "hashedSecret": "322382392c5c402321a0507c9a8fce1c2599e72b631eff4f207104e4f225acfd",
        "receiver": "01a75b03da048b933d2d04cc22283c170eb8300f1806b02bf7138f4092a3a385703864e427d165",
        "sender": "01d8a5b1f0e92d5c333b8368189c8e09c4e7aea7e7186967035242c6ee94bfa8f9cf19725d5e96",
        "timelock": 1532177577,
        "type": 2,
      },
      "id": "19c162756112c6d950593c8d740999d976a9743390415ee870104f336551d73c",
      "spent": true,
      "txId": "37e2ffea404d5dd053e952a06182552c7b3a9d5ee672dd2501ebd0c868c9f215",
      "value": "25000",
    },
  ],
  "confirmedBlockstakeBalance": "0",
  "confirmedCoinBalance": "0",
  "isBlockCreator": false,
  "lastCoinSpent": Object {
    "height": 73627,
    "txid": "e3d4558124736231f79df3c1c1df36c737002d6c10b1097cc098ce19273d3e12",
  },
  "transactions": Array [
    DefaultTransaction {
      "blockHeight": 73623,
      "blockId": undefined,
      "blockStakeInputs": Array [],
      "blockStakeOutputs": Array [],
      "blockTime": undefined,
      "coinInputs": Array [
        Object {
          "fulfillment": SingleSignatureFulfillment {
            "publicKey": "ed25519:1e3d8ef0467b3e9fcce341189a577bf80866ea5b38e9b345464bf54434331881",
            "signature": "f026d7dc1d66d4e272e4afb84c16a76f4f847384b874a7c914eb246da6dd6e12197e80ac754ef5bca7cabe51343d98ef9dd535ef4ed41c9ddfc4881b4d4f8a00",
            "type": 1,
          },
          "parentOutput": Object {
            "condition": UnlockhashCondition {
              "type": 1,
              "unlockhash": "01b20e5cfd38dd4f3fe85d04b43a04d603e8edb2c3978d6645c9fa94399c7e9603e5bf076b90e0",
            },
            "id": "19c162756112c6d950593c8d740999d976a9743390415ee870104f336551d73c",
            "value": "988232.099999999",
          },
          "parentid": "d3eb85596504a257a68e2b47f0ad79af0f99f28a9b9683660f61589bb3f35624",
        },
      ],
      "coinOutputs": Array [
        Object {
          "condition": AtomicSwapCondition {
            "contractAddress": "02ed044fa056e6fda24261628576d61f7ed580a649496a582ac0691f90f4ef89002a1a5f368c57",
            "hashedSecret": "322382392c5c402321a0507c9a8fce1c2599e72b631eff4f207104e4f225acfd",
            "receiver": "01a75b03da048b933d2d04cc22283c170eb8300f1806b02bf7138f4092a3a385703864e427d165",
            "sender": "01d8a5b1f0e92d5c333b8368189c8e09c4e7aea7e7186967035242c6ee94bfa8f9cf19725d5e96",
            "timelock": 1532177577,
            "type": 2,
          },
          "id": "19c162756112c6d950593c8d740999d976a9743390415ee870104f336551d73c",
          "value": "25000",
        },
        Object {
          "condition": UnlockhashCondition {
            "type": 1,
            "unlockhash": "01dd80a9fb72a8674a8ca28f567d3fc8d1f137bb52e01fffa8152dede7029fffd73c1d00eae73e",
          },
          "id": "994c3e698592e5354bd75329f3b50707cbe659da4d0b7f0bffe061bb443a412f",
          "value": "963231.999999999",
        },
      ],
      "id": "37e2ffea404d5dd053e952a06182552c7b3a9d5ee672dd2501ebd0c868c9f215",
      "unconfirmed": false,
      "version": 1,
    },
    DefaultTransaction {
      "blockHeight": 73627,
      "blockId": undefined,
      "blockStakeInputs": Array [],
      "blockStakeOutputs": Array [],
      "blockTime": undefined,
      "coinInputs": Array [
        Object {
          "fulfillment": AtomicSwapFulfillment {
            "publicKey": "ed25519:0057bbe7d51abdaedb1c31a2f1b3b12b3c47bdf2c31b94d248561da244fbb7da",
            "secret": "5486225923792fd14b2e31317381154fba96e6c88f7cc6e7dd758b3c8d26c642",
            "signature": "83e1e1225a292c42f038d2c9061969c334520ad06d45c4aa48167ebcce72eab3197cb6a7b6373d30d026dfdda50937967f0c0437dd93d15252f22819dcbbec09",
            "type": 1,
          },
          "parentOutput": Object {
            "condition": AtomicSwapCondition {
              "contractAddress": "01a75b03da048b933d2d04cc22283c170eb8300f1806b02bf7138f4092a3a385703864e427d165",
              "hashedSecret": "322382392c5c402321a0507c9a8fce1c2599e72b631eff4f207104e4f225acfd",
              "receiver": "01a75b03da048b933d2d04cc22283c170eb8300f1806b02bf7138f4092a3a385703864e427d165",
              "sender": "01d8a5b1f0e92d5c333b8368189c8e09c4e7aea7e7186967035242c6ee94bfa8f9cf19725d5e96",
              "timelock": 1532177577,
              "type": 2,
            },
            "id": "ba258e081b5bc7ab879f51be2715135cd166900a07ac5dc7ef3330ed45776206",
            "value": "25000",
          },
          "parentid": "19c162756112c6d950593c8d740999d976a9743390415ee870104f336551d73c",
        },
      ],
      "coinOutputs": Array [
        Object {
          "condition": UnlockhashCondition {
            "type": 1,
            "unlockhash": "01a75b03da048b933d2d04cc22283c170eb8300f1806b02bf7138f4092a3a385703864e427d165",
          },
          "id": "ba258e081b5bc7ab879f51be2715135cd166900a07ac5dc7ef3330ed45776206",
          "value": "24999.9",
        },
      ],
      "id": "e3d4558124736231f79df3c1c1df36c737002d6c10b1097cc098ce19273d3e12",
      "unconfirmed": false,
      "version": 1,
    },
  ],
}
`;

exports[`test parsing an spent blockstake output id 1`] = `
BlockstakeOutputInfo {
  "input": Object {
    "fulfillment": SingleSignatureFulfillment {
      "publicKey": "ed25519:846bc547599b9ed6f686fd1bca39e8fc5524559b559081ec7bb76b6a7e5c2218",
      "signature": "cf0f67ec82fe4aa8531223a2f8522f5927537acb79516a3726c1636e9b540d3f1cdb9f79f08740d2f835d6f5f82a823e12c505d30c10ae4f53054742072c1509",
      "type": 1,
    },
    "parentOutput": Object {
      "condition": UnlockhashCondition {
        "type": 1,
        "unlockhash": "0165c4d7cf3c52cab81fd7e82cd9e39d7fb8a1c7ab7515ac904299495244d0822c15841672f205",
      },
      "id": "ef6663292e70cd5a2f2ee3e3753d91828b5c21eda8d99088d35a9fb95922114c",
      "value": "900",
    },
    "parentid": "603222de3b3e729950d6eccd9dfc4882e64cc48cb1147aa51f158afc6ddc9b1b",
    "txId": "cc93a40764118c2546dc976ebe10d61b42f5ef9763ff75733075c777ce1f30dd",
  },
  "output": Object {
    "condition": UnlockhashCondition {
      "type": 1,
      "unlockhash": "0165c4d7cf3c52cab81fd7e82cd9e39d7fb8a1c7ab7515ac904299495244d0822c15841672f205",
    },
    "id": "603222de3b3e729950d6eccd9dfc4882e64cc48cb1147aa51f158afc6ddc9b1b",
    "txId": "22a0d45ba6b2360947cffabd9634ecdba993a945b0bd5d7a49dfd0f5164c9a2e",
    "value": "900",
  },
}
`;

exports[`test parsing an unspent coin output id 1`] = `
CoinOutputInfo {
  "output": Object {
    "condition": UnlockhashCondition {
      "type": 1,
      "unlockhash": "01b2cc84e99844f8169d23cee1545e88f780b0f49e3c92463ccd9c23177f7fa173cc8a14fc7c17",
    },
    "id": "a428df56e77c40621333f2923f27e885702f1ba9a3dc52f41e97c0a4784fea64",
    "txId": "0d9eedaeacd7dd7e08975a16440352eb3c214e91f9dfb0d00b62be39468578c4",
    "value": "300",
  },
}
`;

exports[`test parsing an unspent coin output id for blockcreator 1`] = `
CoinOutputInfo {
  "output": Object {
    "blockId": "6d298dc80f5b099399a0946997387b5326ded0502cda3e14df1999a87bfd17cb",
    "id": "f0bf7ede4bb6c38cf3199b8a1c3501ed48346bd926bf5bfe6c3a2dcadcfa4af9",
    "isBlockCreatorReward": true,
    "unlockhash": "01e34588bee49b2cbd53f2198cd5022fbbe78aecb8125a39efb8699720b946e84ead718daf0cd6",
    "value": "10",
  },
}
`;

exports[`test parsing block 1`] = `
Block {
  "estimatedActiveBlockStakes": "974",
  "height": 367184,
  "id": "2c8cc0b42b6232dcab8d27472781cfecfcab9fcae36d776672244016b69cead5",
  "minerPayouts": Array [
    Object {
      "description": "Block Creator Reward (new coins)",
      "id": "cf958eb5c1b44ea603bfe29afbb22ba72371a48f881d1abdd6dc63a8b05254c4",
      "isBlockCreatorReward": true,
      "unlockhash": "0165c4d7cf3c52cab81fd7e82cd9e39d7fb8a1c7ab7515ac904299495244d0822c15841672f205",
      "value": "10",
    },
    Object {
      "description": "All Transaction fees combined",
      "id": "c71f58335faf9a31a4c76877c448dd756eac95c8061968215fd4a1ce88cbcec2",
      "isBlockCreatorReward": false,
      "sourceTransactionIds": Array [
        "309ad6dd62d158d7a79b0810dcde2faf38504088cfabe0a25c1ffa3d25a46c04",
        "bd30d6e590597797d5d24115afeca02e4d0efc55902343e18d7bf0c30181fe43",
      ],
      "unlockhash": "0165c4d7cf3c52cab81fd7e82cd9e39d7fb8a1c7ab7515ac904299495244d0822c15841672f205",
      "value": "0.2",
    },
  ],
  "parentId": "f7495ebb1f7464455fabba51489631533d0dbc04eaa24f1880879770b80bbc49",
  "timestamp": 1568963542,
  "transactions": Array [
    DefaultTransaction {
      "blockHeight": 367184,
      "blockId": "2c8cc0b42b6232dcab8d27472781cfecfcab9fcae36d776672244016b69cead5",
      "blockStakeInputs": Array [
        Object {
          "fulfillment": SingleSignatureFulfillment {
            "publicKey": "ed25519:846bc547599b9ed6f686fd1bca39e8fc5524559b559081ec7bb76b6a7e5c2218",
            "signature": "5c095a6f16780e9a78692287bb48aa40b3f8fe40398275e86e921de980b9d819f79cf6007bb69f81714a2ab60925e13ae8459016e86f39afa37e108f05e65a00",
            "type": 1,
          },
          "parentOutput": Object {
            "condition": UnlockhashCondition {
              "type": 1,
              "unlockhash": "0165c4d7cf3c52cab81fd7e82cd9e39d7fb8a1c7ab7515ac904299495244d0822c15841672f205",
            },
            "id": "87d11d7e6a8c381fc98195168af393d82872cc4a69749bfa3138150a85213070",
            "value": "900",
          },
          "parentid": "6402109ebc0a7aca37c63ce45b13e96c2f40104ed6ced65859b87354a451a673",
        },
      ],
      "blockStakeOutputs": Array [
        Object {
          "condition": UnlockhashCondition {
            "type": 1,
            "unlockhash": "0165c4d7cf3c52cab81fd7e82cd9e39d7fb8a1c7ab7515ac904299495244d0822c15841672f205",
          },
          "id": "87d11d7e6a8c381fc98195168af393d82872cc4a69749bfa3138150a85213070",
          "value": "900",
        },
      ],
      "blockTime": 1568963542,
      "coinInputs": Array [],
      "coinOutputs": Array [],
      "id": "3fd24cc322f16a019810f92e2eb2b9b9c7e3b074e6bfcf1c044cce0a74ded5f3",
      "unconfirmed": false,
      "version": 1,
    },
    DefaultTransaction {
      "blockHeight": 367184,
      "blockId": "2c8cc0b42b6232dcab8d27472781cfecfcab9fcae36d776672244016b69cead5",
      "blockStakeInputs": Array [],
      "blockStakeOutputs": Array [],
      "blockTime": 1568963542,
      "coinInputs": Array [
        Object {
          "fulfillment": SingleSignatureFulfillment {
            "publicKey": "ed25519:9bb8a64732517214a451fa054378da4273722eb219b7f4c0d2f9619996e2f03b",
            "signature": "24e72480a9b4236583b46a5b4f8f797eb5fe4163d7b4724bd498cc8e1e402fa451a0721a5dc52938a2848c3c6bd0d1d369795c946071b62494bcd0c2acb53409",
            "type": 1,
          },
          "parentOutput": Object {
            "condition": UnlockhashCondition {
              "type": 1,
              "unlockhash": "010166d96586cc4d678eedca31a03d36675873b4e4365066a75a54d0cdda5879bdd3df1b54a698",
            },
            "id": "b824e78f95745f514153c0e2047a761808733f821c9f0e5d014c38b569fa0721",
            "value": "300",
          },
          "parentid": "456e41e7473e1e69853226078af16b7df94f89473324479c0f3196ee1fe4fa82",
        },
      ],
      "coinOutputs": Array [
        Object {
          "condition": MultisignatureCondition {
            "multisigAddress": "03e338203f19f1f1470287f52ae84f4644b989491b8a59d5eec3d3d38cf1021c87fb0f5cf914c3",
            "signatureCount": 2,
            "type": 4,
            "unlockhashes": Array [
              "010166d96586cc4d678eedca31a03d36675873b4e4365066a75a54d0cdda5879bdd3df1b54a698",
              "01598a93366f325dc773a6d92d1e27f998e9267e2faa862e1d90ad84bf3a87bb211bc3ee5ed275",
            ],
          },
          "id": "b824e78f95745f514153c0e2047a761808733f821c9f0e5d014c38b569fa0721",
          "value": "100",
        },
        Object {
          "condition": UnlockhashCondition {
            "type": 1,
            "unlockhash": "010166d96586cc4d678eedca31a03d36675873b4e4365066a75a54d0cdda5879bdd3df1b54a698",
          },
          "id": "25b73b21067a280e29c50e0ad2db8e0357cd51fd7dd42062cc840b23da3fc6c4",
          "value": "199.9",
        },
      ],
      "id": "309ad6dd62d158d7a79b0810dcde2faf38504088cfabe0a25c1ffa3d25a46c04",
      "unconfirmed": false,
      "version": 1,
    },
    DefaultTransaction {
      "blockHeight": 367184,
      "blockId": "2c8cc0b42b6232dcab8d27472781cfecfcab9fcae36d776672244016b69cead5",
      "blockStakeInputs": Array [],
      "blockStakeOutputs": Array [],
      "blockTime": 1568963542,
      "coinInputs": Array [
        Object {
          "fulfillment": MultisignatureFulfillment {
            "pairs": Array [
              Object {
                "publickey": "ed25519:9bb8a64732517214a451fa054378da4273722eb219b7f4c0d2f9619996e2f03b",
                "signature": "a333d5cf67399807e51a53928f3420f0a1a9e955ef72dacc1f12f94d2bdafddec78c8270e87f7aed00d62a094def6e7e034ac1fc86f0a390ffc9eca37ae7830b",
              },
              Object {
                "publickey": "ed25519:aacfc6421ec2936227a607282ad38867c21107412751e2be96f99abdbacb86b0",
                "signature": "e742aac104b2d0a0af4fba3f8ec2f9e53991782bc1992001bd66bbc8bce633be979c44ebb19c487ffb0adef4d4f31d5e93580311a8769d57458128da4291fe08",
              },
            ],
            "type": 3,
          },
          "parentOutput": Object {
            "condition": MultisignatureCondition {
              "multisigAddress": "01598a93366f325dc773a6d92d1e27f998e9267e2faa862e1d90ad84bf3a87bb211bc3ee5ed275",
              "signatureCount": 2,
              "type": 4,
              "unlockhashes": Array [
                "010166d96586cc4d678eedca31a03d36675873b4e4365066a75a54d0cdda5879bdd3df1b54a698",
                "01598a93366f325dc773a6d92d1e27f998e9267e2faa862e1d90ad84bf3a87bb211bc3ee5ed275",
              ],
            },
            "id": "70b8ed99cc36847a702a124bfee76d66f5bc5a21201d6e892895a85051d325ee",
            "value": "100",
          },
          "parentid": "b824e78f95745f514153c0e2047a761808733f821c9f0e5d014c38b569fa0721",
        },
      ],
      "coinOutputs": Array [
        Object {
          "condition": UnlockhashCondition {
            "type": 1,
            "unlockhash": "01598a93366f325dc773a6d92d1e27f998e9267e2faa862e1d90ad84bf3a87bb211bc3ee5ed275",
          },
          "id": "70b8ed99cc36847a702a124bfee76d66f5bc5a21201d6e892895a85051d325ee",
          "value": "4",
        },
        Object {
          "condition": MultisignatureCondition {
            "multisigAddress": "03e338203f19f1f1470287f52ae84f4644b989491b8a59d5eec3d3d38cf1021c87fb0f5cf914c3",
            "signatureCount": 2,
            "type": 4,
            "unlockhashes": Array [
              "010166d96586cc4d678eedca31a03d36675873b4e4365066a75a54d0cdda5879bdd3df1b54a698",
              "01598a93366f325dc773a6d92d1e27f998e9267e2faa862e1d90ad84bf3a87bb211bc3ee5ed275",
            ],
          },
          "id": "7f9b4564b0e66d34ba8eac3bd1630523b5721ca39c490e84e9c4e95d3298c7aa",
          "value": "95.9",
        },
      ],
      "id": "bd30d6e590597797d5d24115afeca02e4d0efc55902343e18d7bf0c30181fe43",
      "unconfirmed": false,
      "version": 1,
    },
  ],
}
`;

exports[`test parsing block from block response 1`] = `
Block {
  "estimatedActiveBlockStakes": "972",
  "height": 371498,
  "id": "1220b86ae316865d6efe51211256041a9636984e74400dc5ab90700fdad6c179",
  "minerPayouts": Array [
    Object {
      "description": "Block Creator Reward (new coins)",
      "id": "602a519615e374b5b11660660e48588bd47c89f8ee225fbb8f07b4b597a86fc6",
      "isBlockCreatorReward": true,
      "unlockhash": "0165c4d7cf3c52cab81fd7e82cd9e39d7fb8a1c7ab7515ac904299495244d0822c15841672f205",
      "value": "10",
    },
  ],
  "parentId": "053262f16fe68923bbbaf81f63e03ea2fcf4aa481a336d0b5a67d718f5439513",
  "timestamp": 1569481927,
  "transactions": Array [
    DefaultTransaction {
      "blockHeight": 371498,
      "blockId": "1220b86ae316865d6efe51211256041a9636984e74400dc5ab90700fdad6c179",
      "blockStakeInputs": Array [
        Object {
          "fulfillment": SingleSignatureFulfillment {
            "publicKey": "ed25519:846bc547599b9ed6f686fd1bca39e8fc5524559b559081ec7bb76b6a7e5c2218",
            "signature": "ef972bdd313737ab928e477f86a835a3881ad125865404ee670b2ff53e8ea57489895101472b8b90a9968804b82bb79c503687a7467a014a5f48858cc7e06903",
            "type": 1,
          },
          "parentOutput": Object {
            "condition": UnlockhashCondition {
              "type": 1,
              "unlockhash": "0165c4d7cf3c52cab81fd7e82cd9e39d7fb8a1c7ab7515ac904299495244d0822c15841672f205",
            },
            "id": "2a2b7eaf655794d1d8c09809db45dd187d2a57eba7369d21be3d975d94e2f5bc",
            "value": "900",
          },
          "parentid": "e107bda37b98c9d326eecee57726efef4bfd8979b47df81550ea05fa3ced788b",
        },
      ],
      "blockStakeOutputs": Array [
        Object {
          "condition": UnlockhashCondition {
            "type": 1,
            "unlockhash": "0165c4d7cf3c52cab81fd7e82cd9e39d7fb8a1c7ab7515ac904299495244d0822c15841672f205",
          },
          "id": "2a2b7eaf655794d1d8c09809db45dd187d2a57eba7369d21be3d975d94e2f5bc",
          "value": "900",
        },
      ],
      "blockTime": 1569481927,
      "coinInputs": Array [],
      "coinOutputs": Array [],
      "id": "9451db702b440775db513a5343ce0ad084d3d44580002aa91d14257dfabb03c8",
      "unconfirmed": false,
      "version": 1,
    },
  ],
}
`;

exports[`test parsing block with custody fee 1`] = `
Block {
  "estimatedActiveBlockStakes": "0",
  "height": 76,
  "id": "bf52c9124b07b3fc3cbe7113dc377226b5caad902a6312624587e7748f6ffb09",
  "minerPayouts": Array [
    Object {
      "creationTime": 1570720622,
      "custodyFee": "4.7e-7",
      "description": "Block Creator Reward (new coins)",
      "feeComputationTime": 1572345182,
      "id": "a8ffebb05e4b2c0576caa9deda373c6184b0a1000459345669389cd55377cc03",
      "isBlockCreatorReward": true,
      "isCustodyFee": false,
      "spendableValue": "0.00099953",
      "spent": false,
      "unlockhash": "01952a12e703319c4417fd8727453f1b668ef0017bb98b1c6ab8b94afd5a4599a4e044cb9f0f3f",
      "value": "0.001",
    },
  ],
  "parentId": "aa1acc11da6cfe43a7f9f90f4314be5f7f61e41148dc97315dad9905564b49f1",
  "timestamp": 1570720622,
  "transactions": Array [
    DefaultTransaction {
      "blockHeight": 76,
      "blockId": "bf52c9124b07b3fc3cbe7113dc377226b5caad902a6312624587e7748f6ffb09",
      "blockStakeInputs": Array [
        Object {
          "fulfillment": SingleSignatureFulfillment {
            "publicKey": "ed25519:49b5075a0fd41899ddae3fcbf53058f6474538937ec023191f4c85f712559bb4",
            "signature": "0efce7c1b86079ea0cff27a0eb903b11a7b57369d9d646ea37a6c1bd82e5a904ae847c2a9f8afe24a0e499ccde2b8f94300e440c610c36662862279b70c53301",
            "type": 1,
          },
          "parentOutput": Object {
            "condition": UnlockhashCondition {
              "type": 1,
              "unlockhash": "01952a12e703319c4417fd8727453f1b668ef0017bb98b1c6ab8b94afd5a4599a4e044cb9f0f3f",
            },
            "id": "3c26daff3795136c3ecab6e3c2919807f6aaf590845467afe48b08376396364e",
            "value": "1000",
          },
          "parentid": "808e429ec26a9e5c98b064014f3247583db77829fda892d227a4ef6d4175e3d1",
        },
      ],
      "blockStakeOutputs": Array [
        Object {
          "condition": UnlockhashCondition {
            "type": 1,
            "unlockhash": "01952a12e703319c4417fd8727453f1b668ef0017bb98b1c6ab8b94afd5a4599a4e044cb9f0f3f",
          },
          "id": "3c26daff3795136c3ecab6e3c2919807f6aaf590845467afe48b08376396364e",
          "value": "1000",
        },
      ],
      "blockTime": 1570720622,
      "coinInputs": Array [],
      "coinOutputs": Array [],
      "id": "ba605af1803484284310c61d3fdc43e068fdff245099dac51c57aecb6bf42a35",
      "unconfirmed": false,
      "version": 1,
    },
    DefaultTransaction {
      "blockHeight": 76,
      "blockId": "bf52c9124b07b3fc3cbe7113dc377226b5caad902a6312624587e7748f6ffb09",
      "blockStakeInputs": Array [],
      "blockStakeOutputs": Array [],
      "blockTime": 1570720622,
      "coinInputs": Array [
        Object {
          "creationTime": 1570720400,
          "custodyFee": "0.347002515",
          "feeComputationTime": 1570720412,
          "fulfillment": SingleSignatureFulfillment {
            "publicKey": "ed25519:6513579d458e42468e67102b8660495029bc6090a773810d946bc04d5ba73735",
            "signature": "f71d9555470c8d2f088e7232641b87c0590ce4b66e91e417dff257dd295598381acb36f354c9c775a1354fdad29f33838298d860ef0d7fd5a4f0c4958f9c9607",
            "type": 1,
          },
          "isCustodyFee": false,
          "parentOutput": Object {
            "condition": UnlockhashCondition {
              "type": 1,
              "unlockhash": "01215a03f0098c4fcd801854da4d7bb2e9c78b4d3598fec89f42bc19fb79889bbf7a6aabdbe95f",
            },
            "creationTime": 1570720622,
            "custodyFee": "0.223377494",
            "feeComputationTime": 1570806400,
            "id": "45ae873837e28cc2f54f21b41bee63d0d66c824a0608f10b4c0526cb802bc35a",
            "isCustodyFee": false,
            "spendableValue": "8999.776622506",
            "spent": true,
            "value": "99936724.475491963",
          },
          "parentid": "af362882824cc34917969cbea01cf7717717bcb978d01cf581be32965683604a",
          "spendableValue": "99936724.128489448",
          "spent": true,
        },
      ],
      "coinOutputs": Array [
        Object {
          "condition": UnlockhashCondition {
            "type": 1,
            "unlockhash": "0178c06a59eca06ca656c400cfc5960da128162a8aa122a41b1051bff93d4c10c17b024cc8af88",
          },
          "creationTime": 1570720622,
          "custodyFee": "0.223377494",
          "feeComputationTime": 1570806400,
          "id": "45ae873837e28cc2f54f21b41bee63d0d66c824a0608f10b4c0526cb802bc35a",
          "isCustodyFee": false,
          "spendableValue": "8999.776622506",
          "spent": true,
          "value": "9000",
        },
        Object {
          "condition": UnlockhashCondition {
            "type": 1,
            "unlockhash": "0178c06a59eca06ca656c400cfc5960da128162a8aa122a41b1051bff93d4c10c17b024cc8af88",
          },
          "creationTime": 1570720622,
          "custodyFee": "0.223377494",
          "feeComputationTime": 1570806400,
          "id": "b2b76dd6c0402f81261f89e283e388042a3264bc4cbe68d1ebedee76db2f5520",
          "isCustodyFee": false,
          "spendableValue": "8999.776622506",
          "spent": true,
          "value": "9000",
        },
        Object {
          "condition": UnlockhashCondition {
            "type": 1,
            "unlockhash": "0178c06a59eca06ca656c400cfc5960da128162a8aa122a41b1051bff93d4c10c17b024cc8af88",
          },
          "creationTime": 1570720622,
          "custodyFee": "1.92942246",
          "feeComputationTime": 1571461591,
          "id": "550e977ebdae45cb6b4ae4e831127b36983318a7ec79dc8dce810c0b7f87e1b2",
          "isCustodyFee": false,
          "spendableValue": "8998.07057754",
          "spent": true,
          "value": "9000",
        },
        Object {
          "condition": UnlockhashCondition {
            "type": 1,
            "unlockhash": "0178c06a59eca06ca656c400cfc5960da128162a8aa122a41b1051bff93d4c10c17b024cc8af88",
          },
          "creationTime": 1570720622,
          "custodyFee": "0.370049929",
          "feeComputationTime": 1570862723,
          "id": "ef8e02fe31884229d9344de9cb6334923c24bdb0660a648fef7ce4d59625058c",
          "isCustodyFee": false,
          "spendableValue": "8999.629950071",
          "spent": true,
          "value": "9000",
        },
        Object {
          "condition": UnlockhashCondition {
            "type": 1,
            "unlockhash": "0178c06a59eca06ca656c400cfc5960da128162a8aa122a41b1051bff93d4c10c17b024cc8af88",
          },
          "creationTime": 1570720622,
          "custodyFee": "1.508260313",
          "feeComputationTime": 1571299836,
          "id": "09429abf8428df29ab27aaf8aed3b2c0d8e5162913e57f15dc2f887c9d8b545b",
          "isCustodyFee": false,
          "spendableValue": "8998.491739687",
          "spent": true,
          "value": "9000",
        },
        Object {
          "condition": UnlockhashCondition {
            "type": 1,
            "unlockhash": "0178c06a59eca06ca656c400cfc5960da128162a8aa122a41b1051bff93d4c10c17b024cc8af88",
          },
          "creationTime": 1570720622,
          "custodyFee": "0.043416573",
          "feeComputationTime": 1570737294,
          "id": "f9378c5be37f57fe32630fa567fcee0dedf871e736edad1a4e964f56693d3ab3",
          "isCustodyFee": false,
          "spendableValue": "8999.956583427",
          "spent": true,
          "value": "9000",
        },
        Object {
          "condition": UnlockhashCondition {
            "type": 1,
            "unlockhash": "0178c06a59eca06ca656c400cfc5960da128162a8aa122a41b1051bff93d4c10c17b024cc8af88",
          },
          "creationTime": 1570720622,
          "custodyFee": "0.009489581",
          "feeComputationTime": 1570724266,
          "id": "74a0a869da9aedfb2eb1057468647cee5a687c8221426c82b6c23f4da83dd289",
          "isCustodyFee": false,
          "spendableValue": "8999.990510419",
          "spent": true,
          "value": "9000",
        },
        Object {
          "condition": CustodyFeeCondition {
            "custodyFeeVoidAddress": "800000000000000000000000000000000000000000000000000000000000000000af7bedde1fea",
            "type": 128,
          },
          "creationTime": 1570720622,
          "custodyFee": "0",
          "feeComputationTime": 0,
          "id": "24e3fc88e27dd45113a5686423a81491a78008130e35d52e0baed012d184103d",
          "isCustodyFee": true,
          "spendableValue": "0",
          "spent": false,
          "value": "0.347002515",
        },
        Object {
          "condition": UnlockhashCondition {
            "type": 1,
            "unlockhash": "01215a03f0098c4fcd801854da4d7bb2e9c78b4d3598fec89f42bc19fb79889bbf7a6aabdbe95f",
          },
          "creationTime": 1570720622,
          "custodyFee": "46937.115480687",
          "feeComputationTime": 1572345182,
          "id": "61af2a9ba0758e553a2da15c7fd777b066040b3c4ecaa47bd54d940045ee59f9",
          "isCustodyFee": false,
          "spendableValue": "99826787.012008761",
          "spent": false,
          "value": "99873724.127489448",
        },
      ],
      "id": "a7af3a6e827a735f5a0dac599b155f2fa8296dc87ad7c605ed4fbc43563325bf",
      "unconfirmed": false,
      "version": 1,
    },
  ],
}
`;

exports[`test parsing transaction 1`] = `
DefaultTransaction {
  "blockHeight": 5,
  "blockId": undefined,
  "blockStakeInputs": Array [
    Object {
      "fulfillment": SingleSignatureFulfillment {
        "publicKey": "ed25519:b76697f1517455d0fa41fe57c2b54c80cbdd9761393f7e545db747482eb2727b",
        "signature": "6d796ef7369853fd8b3dd1ea7a75c8929c0e6c2387a2c5b3c78b61c34734ab65222578483458c68f8b25d5970b02665cd68e2d57972575494a40249cbaf41f0b",
        "type": 1,
      },
      "parentOutput": Object {
        "condition": UnlockhashCondition {
          "type": 1,
          "unlockhash": "01fae67d9109d9cc1d9f7209468d55d0d52eca8ff23ae26db54a14568a5511590bca2a72d13ab7",
        },
        "id": "25ac4e89593701f01847f28275f45cb3630624d3c86dda776cf3f2fda20afc36",
        "value": "1000",
      },
      "parentid": "90fa5e4456ebaefc77e9e2852199e1003dced4bac65e6e2e08b70690f97013d0",
    },
  ],
  "blockStakeOutputs": Array [
    Object {
      "condition": UnlockhashCondition {
        "type": 1,
        "unlockhash": "01fae67d9109d9cc1d9f7209468d55d0d52eca8ff23ae26db54a14568a5511590bca2a72d13ab7",
      },
      "id": "25ac4e89593701f01847f28275f45cb3630624d3c86dda776cf3f2fda20afc36",
      "value": "1000",
    },
  ],
  "blockTime": undefined,
  "coinInputs": Array [],
  "coinOutputs": Array [],
  "id": "a759d010ec638cef7f06565f04f4d7c06d66ca4e02aa342ecce001d95135087e",
  "unconfirmed": false,
  "version": 1,
}
`;

exports[`test parsing transaction 2`] = `
DefaultTransaction {
  "blockHeight": 76,
  "blockId": undefined,
  "blockStakeInputs": Array [],
  "blockStakeOutputs": Array [],
  "blockTime": undefined,
  "coinInputs": Array [
    Object {
      "creationTime": 1570720400,
      "custodyFee": "0.347002515",
      "feeComputationTime": 1570720412,
      "fulfillment": SingleSignatureFulfillment {
        "publicKey": "ed25519:6513579d458e42468e67102b8660495029bc6090a773810d946bc04d5ba73735",
        "signature": "f71d9555470c8d2f088e7232641b87c0590ce4b66e91e417dff257dd295598381acb36f354c9c775a1354fdad29f33838298d860ef0d7fd5a4f0c4958f9c9607",
        "type": 1,
      },
      "isCustodyFee": false,
      "parentOutput": Object {
        "condition": UnlockhashCondition {
          "type": 1,
          "unlockhash": "01215a03f0098c4fcd801854da4d7bb2e9c78b4d3598fec89f42bc19fb79889bbf7a6aabdbe95f",
        },
        "creationTime": 1570720622,
        "custodyFee": "0.223377494",
        "feeComputationTime": 1570806400,
        "id": "45ae873837e28cc2f54f21b41bee63d0d66c824a0608f10b4c0526cb802bc35a",
        "isCustodyFee": false,
        "spendableValue": "8999.776622506",
        "spent": true,
        "value": "99936724.475491963",
      },
      "parentid": "af362882824cc34917969cbea01cf7717717bcb978d01cf581be32965683604a",
      "spendableValue": "99936724.128489448",
      "spent": true,
    },
  ],
  "coinOutputs": Array [
    Object {
      "condition": UnlockhashCondition {
        "type": 1,
        "unlockhash": "0178c06a59eca06ca656c400cfc5960da128162a8aa122a41b1051bff93d4c10c17b024cc8af88",
      },
      "creationTime": 1570720622,
      "custodyFee": "0.223377494",
      "feeComputationTime": 1570806400,
      "id": "45ae873837e28cc2f54f21b41bee63d0d66c824a0608f10b4c0526cb802bc35a",
      "isCustodyFee": false,
      "spendableValue": "8999.776622506",
      "spent": true,
      "value": "9000",
    },
    Object {
      "condition": UnlockhashCondition {
        "type": 1,
        "unlockhash": "0178c06a59eca06ca656c400cfc5960da128162a8aa122a41b1051bff93d4c10c17b024cc8af88",
      },
      "creationTime": 1570720622,
      "custodyFee": "0.223377494",
      "feeComputationTime": 1570806400,
      "id": "b2b76dd6c0402f81261f89e283e388042a3264bc4cbe68d1ebedee76db2f5520",
      "isCustodyFee": false,
      "spendableValue": "8999.776622506",
      "spent": true,
      "value": "9000",
    },
    Object {
      "condition": UnlockhashCondition {
        "type": 1,
        "unlockhash": "0178c06a59eca06ca656c400cfc5960da128162a8aa122a41b1051bff93d4c10c17b024cc8af88",
      },
      "creationTime": 1570720622,
      "custodyFee": "1.92942246",
      "feeComputationTime": 1571461591,
      "id": "550e977ebdae45cb6b4ae4e831127b36983318a7ec79dc8dce810c0b7f87e1b2",
      "isCustodyFee": false,
      "spendableValue": "8998.07057754",
      "spent": true,
      "value": "9000",
    },
    Object {
      "condition": UnlockhashCondition {
        "type": 1,
        "unlockhash": "0178c06a59eca06ca656c400cfc5960da128162a8aa122a41b1051bff93d4c10c17b024cc8af88",
      },
      "creationTime": 1570720622,
      "custodyFee": "0.370049929",
      "feeComputationTime": 1570862723,
      "id": "ef8e02fe31884229d9344de9cb6334923c24bdb0660a648fef7ce4d59625058c",
      "isCustodyFee": false,
      "spendableValue": "8999.629950071",
      "spent": true,
      "value": "9000",
    },
    Object {
      "condition": UnlockhashCondition {
        "type": 1,
        "unlockhash": "0178c06a59eca06ca656c400cfc5960da128162a8aa122a41b1051bff93d4c10c17b024cc8af88",
      },
      "creationTime": 1570720622,
      "custodyFee": "1.508260313",
      "feeComputationTime": 1571299836,
      "id": "09429abf8428df29ab27aaf8aed3b2c0d8e5162913e57f15dc2f887c9d8b545b",
      "isCustodyFee": false,
      "spendableValue": "8998.491739687",
      "spent": true,
      "value": "9000",
    },
    Object {
      "condition": UnlockhashCondition {
        "type": 1,
        "unlockhash": "0178c06a59eca06ca656c400cfc5960da128162a8aa122a41b1051bff93d4c10c17b024cc8af88",
      },
      "creationTime": 1570720622,
      "custodyFee": "0.043416573",
      "feeComputationTime": 1570737294,
      "id": "f9378c5be37f57fe32630fa567fcee0dedf871e736edad1a4e964f56693d3ab3",
      "isCustodyFee": false,
      "spendableValue": "8999.956583427",
      "spent": true,
      "value": "9000",
    },
    Object {
      "condition": UnlockhashCondition {
        "type": 1,
        "unlockhash": "0178c06a59eca06ca656c400cfc5960da128162a8aa122a41b1051bff93d4c10c17b024cc8af88",
      },
      "creationTime": 1570720622,
      "custodyFee": "0.009489581",
      "feeComputationTime": 1570724266,
      "id": "74a0a869da9aedfb2eb1057468647cee5a687c8221426c82b6c23f4da83dd289",
      "isCustodyFee": false,
      "spendableValue": "8999.990510419",
      "spent": true,
      "value": "9000",
    },
    Object {
      "condition": CustodyFeeCondition {
        "custodyFeeVoidAddress": "800000000000000000000000000000000000000000000000000000000000000000af7bedde1fea",
        "type": 128,
      },
      "creationTime": 1570720622,
      "custodyFee": "0",
      "feeComputationTime": 0,
      "id": "24e3fc88e27dd45113a5686423a81491a78008130e35d52e0baed012d184103d",
      "isCustodyFee": true,
      "spendableValue": "0",
      "spent": false,
      "value": "0.347002515",
    },
    Object {
      "condition": UnlockhashCondition {
        "type": 1,
        "unlockhash": "01215a03f0098c4fcd801854da4d7bb2e9c78b4d3598fec89f42bc19fb79889bbf7a6aabdbe95f",
      },
      "creationTime": 1570720622,
      "custodyFee": "49288.96986519",
      "feeComputationTime": 1572426603,
      "id": "61af2a9ba0758e553a2da15c7fd777b066040b3c4ecaa47bd54d940045ee59f9",
      "isCustodyFee": false,
      "spendableValue": "99824435.157624258",
      "spent": false,
      "value": "99873724.127489448",
    },
  ],
  "id": "a7af3a6e827a735f5a0dac599b155f2fa8296dc87ad7c605ed4fbc43563325bf",
  "unconfirmed": false,
  "version": 1,
}
`;

exports[`test parsing unlockhash 1`] = `
Wallet {
  "address": "0130241fe6fa22f547e9cf2e268af55d117bfe5fbb02894eec42b906a5a9c41ad69d91e6776af1",
  "coinOutputs": Array [
    Object {
      "blockHeight": 367255,
      "condition": UnlockhashCondition {
        "type": 1,
        "unlockhash": "0130241fe6fa22f547e9cf2e268af55d117bfe5fbb02894eec42b906a5a9c41ad69d91e6776af1",
      },
      "id": "da2ca522c21dd46f7c1405876253fef594835ed07f14b905c615730e63d0c7fe",
      "spent": false,
      "txId": "0b434e853b4b3be43a8d4fababc673b15700adbf04538dc202f40c6763bdfc2f",
      "value": "300",
    },
    Object {
      "blockHeight": 366637,
      "condition": UnlockhashCondition {
        "type": 1,
        "unlockhash": "0130241fe6fa22f547e9cf2e268af55d117bfe5fbb02894eec42b906a5a9c41ad69d91e6776af1",
      },
      "id": "2bdb4f32f4c64c05b0562ee998dcf20c88c24904286f0d6f73f2475654e26d9d",
      "spent": false,
      "txId": "156fc468dbeee709819eca1d86dc631966bf2df46ff29f4c5324b292ffb5dbe5",
      "value": "300",
    },
    Object {
      "blockHeight": 366461,
      "condition": UnlockhashCondition {
        "type": 1,
        "unlockhash": "0130241fe6fa22f547e9cf2e268af55d117bfe5fbb02894eec42b906a5a9c41ad69d91e6776af1",
      },
      "id": "18c2d0762964349b4c51dcbd1b3e7c113b186a83a8216c9c9b48a3b95ee1e940",
      "spent": false,
      "txId": "bf0e1dd403a4c4ecc78e26695ff81ad160334a4fae14a56a20b68a82b689b263",
      "value": "300",
    },
  ],
  "confirmedBlockstakeBalance": "0",
  "confirmedCoinBalance": "900",
  "isBlockCreator": false,
  "lastCoinSpent": Object {
    "height": 0,
    "txid": "",
  },
  "transactions": Array [
    DefaultTransaction {
      "blockHeight": 367255,
      "blockId": undefined,
      "blockStakeInputs": Array [],
      "blockStakeOutputs": Array [],
      "blockTime": undefined,
      "coinInputs": Array [
        Object {
          "fulfillment": SingleSignatureFulfillment {
            "publicKey": "ed25519:93546c37eb797b3d44a912f477f8fa4ad094cf36a800de05f4635ca49bd80e2d",
            "signature": "74e51e57188f4551d03f27592eb7ee92f503b5af23265f64b860fcf25709aeb9389a282ee92a4c20fc9ccdbe862aebdf1907a4e0147642cf5422cec9d39faa04",
            "type": 1,
          },
          "parentOutput": Object {
            "condition": UnlockhashCondition {
              "type": 1,
              "unlockhash": "018f6524a5c54c33ec7bcab23c974060f97f16b1f10e4ac0f03fce9e55e5780f3b86dfd42e042d",
            },
            "id": "da2ca522c21dd46f7c1405876253fef594835ed07f14b905c615730e63d0c7fe",
            "value": "599.9",
          },
          "parentid": "4698d5c8c2691a960ff3475f919b38bc846aa732917859d8566ac7f7628c590c",
        },
      ],
      "coinOutputs": Array [
        Object {
          "condition": UnlockhashCondition {
            "type": 1,
            "unlockhash": "0130241fe6fa22f547e9cf2e268af55d117bfe5fbb02894eec42b906a5a9c41ad69d91e6776af1",
          },
          "id": "da2ca522c21dd46f7c1405876253fef594835ed07f14b905c615730e63d0c7fe",
          "value": "300",
        },
        Object {
          "condition": UnlockhashCondition {
            "type": 1,
            "unlockhash": "017d0255eaa6375d3d85a5957158d27aebc9884745c9ddd8e293161bca5e612d25dabc7018193d",
          },
          "id": "de29ba648f6a06666f1e36bc4876b0838cbb41e530b06a790cb91fb64cdf33d5",
          "value": "299.8",
        },
      ],
      "id": "0b434e853b4b3be43a8d4fababc673b15700adbf04538dc202f40c6763bdfc2f",
      "unconfirmed": false,
      "version": 1,
    },
    DefaultTransaction {
      "blockHeight": 366637,
      "blockId": undefined,
      "blockStakeInputs": Array [],
      "blockStakeOutputs": Array [],
      "blockTime": undefined,
      "coinInputs": Array [
        Object {
          "fulfillment": SingleSignatureFulfillment {
            "publicKey": "ed25519:beea9d3fe3807383788f74dce5c72c61906853dbc6fe0f5fccf8855eed860e48",
            "signature": "4407bff0a0be1c30d9808128319efaf67022968e188fdfecf6bec683b6321ee45c3e42f10823a9120c08349e45204df970d94e87837c0950771a9bec57767b05",
            "type": 1,
          },
          "parentOutput": Object {
            "condition": UnlockhashCondition {
              "type": 1,
              "unlockhash": "01e73e6bcac9764649c6b8001efebafcf99dbbee55795ea8b2c25f5087455bfcb686715ea37edd",
            },
            "id": "2bdb4f32f4c64c05b0562ee998dcf20c88c24904286f0d6f73f2475654e26d9d",
            "value": "599.9",
          },
          "parentid": "04932c4eae3a9630ffdb94d173751845a2adcf900fdd172e506a58921806f005",
        },
      ],
      "coinOutputs": Array [
        Object {
          "condition": UnlockhashCondition {
            "type": 1,
            "unlockhash": "0130241fe6fa22f547e9cf2e268af55d117bfe5fbb02894eec42b906a5a9c41ad69d91e6776af1",
          },
          "id": "2bdb4f32f4c64c05b0562ee998dcf20c88c24904286f0d6f73f2475654e26d9d",
          "value": "300",
        },
        Object {
          "condition": UnlockhashCondition {
            "type": 1,
            "unlockhash": "01173ae0923b637fffeb2e74fbaf7f353457bf8f133c3cef667be263e05ac737804d6bfc1c0cde",
          },
          "id": "caf09f1effce78b7c3be4b3b530c16f616a60feb463c9b9b46803855b0373b02",
          "value": "299.8",
        },
      ],
      "id": "156fc468dbeee709819eca1d86dc631966bf2df46ff29f4c5324b292ffb5dbe5",
      "unconfirmed": false,
      "version": 1,
    },
    DefaultTransaction {
      "blockHeight": 366461,
      "blockId": undefined,
      "blockStakeInputs": Array [],
      "blockStakeOutputs": Array [],
      "blockTime": undefined,
      "coinInputs": Array [
        Object {
          "fulfillment": SingleSignatureFulfillment {
            "publicKey": "ed25519:50661fe34fefc8a2c7b24bf48236e887538fd6091e4bead2a8bcb8ab3f73e185",
            "signature": "7dec0e8f6104c41d6d8a1424aaa17566e56212fb0b217b132f905f14f1561e57ca37b80f06067851a045ff74ef498056f1b00492e49395209b580d7d4901af04",
            "type": 1,
          },
          "parentOutput": Object {
            "condition": UnlockhashCondition {
              "type": 1,
              "unlockhash": "013b3e0e0e624d554290fb373e8ae0664b5a3176d4b4cf67b0a505e553257fac7bf176c674d9d7",
            },
            "id": "18c2d0762964349b4c51dcbd1b3e7c113b186a83a8216c9c9b48a3b95ee1e940",
            "value": "599.9",
          },
          "parentid": "37cefaf64a28273a0576272675e91f6676263029d79d560948d0021f371ea6e6",
        },
      ],
      "coinOutputs": Array [
        Object {
          "condition": UnlockhashCondition {
            "type": 1,
            "unlockhash": "0130241fe6fa22f547e9cf2e268af55d117bfe5fbb02894eec42b906a5a9c41ad69d91e6776af1",
          },
          "id": "18c2d0762964349b4c51dcbd1b3e7c113b186a83a8216c9c9b48a3b95ee1e940",
          "value": "300",
        },
        Object {
          "condition": UnlockhashCondition {
            "type": 1,
            "unlockhash": "01b59cdc9c9a6b8bc9c628e979d0dbb477f3ded6e5599cd5c11b921dc83826a8425013f5831466",
          },
          "id": "5340120bf6b9fa478d7b63bf1ad0c5effa6a68624cb9b581ed7ceb36a0ba4ca8",
          "value": "299.8",
        },
      ],
      "id": "bf0e1dd403a4c4ecc78e26695ff81ad160334a4fae14a56a20b68a82b689b263",
      "unconfirmed": false,
      "version": 1,
    },
  ],
}
`;

exports[`test parsing unlockhash blockcreator 1`] = `
Wallet {
  "address": "015a080a9259b9d4aaa550e2156f49b1a79a64c7ea463d810d4493e8242e6791584fbdac553e6f",
  "blockStakesOutputsBlockCreator": Array [
    Object {
      "blockHeight": 7,
      "condition": UnlockhashCondition {
        "type": 1,
        "unlockhash": "015a080a9259b9d4aaa550e2156f49b1a79a64c7ea463d810d4493e8242e6791584fbdac553e6f",
      },
      "id": "b080442f38a245e24dfe1202102ad43613ade70ae2fee47f9932745e9be0a6cc",
      "spent": false,
      "txId": "532d13050f750f137477317985971d84895076e2c24c87670e95b2509d9d16c6",
      "value": "3000",
    },
    Object {
      "blockHeight": 5,
      "condition": UnlockhashCondition {
        "type": 1,
        "unlockhash": "015a080a9259b9d4aaa550e2156f49b1a79a64c7ea463d810d4493e8242e6791584fbdac553e6f",
      },
      "id": "b6ef86dd8f75fc0ed6b5a3794fdd1500bcda58c934aefa3816eb6dce246a8c83",
      "spent": true,
      "txId": "b61d9885bfdbfbdcde968d6457a6b985332b5e470f3222df301c3ecc670e9c26",
      "value": "3000",
    },
    Object {
      "blockHeight": 1,
      "condition": UnlockhashCondition {
        "type": 1,
        "unlockhash": "015a080a9259b9d4aaa550e2156f49b1a79a64c7ea463d810d4493e8242e6791584fbdac553e6f",
      },
      "id": "1d7f4ac218a2f360dd802843a0003443f77d151ba9329fdecbd8da37519b3419",
      "spent": true,
      "txId": "91af9d5e879d4f571734f1cdf32ea34d7dffcb694ed0dfbc4d66a70f3c9217b6",
      "value": "3000",
    },
    Object {
      "blockHeight": 6,
      "condition": UnlockhashCondition {
        "type": 1,
        "unlockhash": "015a080a9259b9d4aaa550e2156f49b1a79a64c7ea463d810d4493e8242e6791584fbdac553e6f",
      },
      "id": "af3e9b0f1834767655587cd59688b7fe290dc716be13196d2560cb116781df15",
      "spent": true,
      "txId": "383b41c83e4e414cb146feeb8e85344b2d5caf81dce91628990b1444dcae1b35",
      "value": "3000",
    },
    Object {
      "blockHeight": 3,
      "condition": UnlockhashCondition {
        "type": 1,
        "unlockhash": "015a080a9259b9d4aaa550e2156f49b1a79a64c7ea463d810d4493e8242e6791584fbdac553e6f",
      },
      "id": "a2b2224e60d42a2e23384f480a0732333dc878f5622dc0f20dac01cb58839bb0",
      "spent": true,
      "txId": "f4fa9b855f391cbc29b2d32bf594a12ba1409c1cb57bb4ee5a4beb5ee4d5652e",
      "value": "3000",
    },
    Object {
      "blockHeight": 0,
      "condition": UnlockhashCondition {
        "type": 1,
        "unlockhash": "015a080a9259b9d4aaa550e2156f49b1a79a64c7ea463d810d4493e8242e6791584fbdac553e6f",
      },
      "id": "cfe78f68f4597ba00472859be59a3b5d32616484ea12604ddc7df6c00095487d",
      "spent": true,
      "txId": "eabb72ecddaeb524a172eb29e9010fc07ba5a13830da0add0593a0950e0d0ae4",
      "value": "3000",
    },
    Object {
      "blockHeight": 4,
      "condition": UnlockhashCondition {
        "type": 1,
        "unlockhash": "015a080a9259b9d4aaa550e2156f49b1a79a64c7ea463d810d4493e8242e6791584fbdac553e6f",
      },
      "id": "2a33b5d09f095e31121df5a880b3767978ba0dc0a018159a72e7646faae73500",
      "spent": true,
      "txId": "6c804d4754a3d38c7ae5f5c134cb4cbe22b98fc178a6928aaccf816d7d17bdf5",
      "value": "3000",
    },
    Object {
      "blockHeight": 2,
      "condition": UnlockhashCondition {
        "type": 1,
        "unlockhash": "015a080a9259b9d4aaa550e2156f49b1a79a64c7ea463d810d4493e8242e6791584fbdac553e6f",
      },
      "id": "5e9c485e44f1fe202a43261ea0e62f6b6a1497380db1f93c7e4a9ad95e63dc58",
      "spent": true,
      "txId": "47fdd730e98c06c745580db0ada4c1263f36b1d1a40d9e02c39316777f481c39",
      "value": "3000",
    },
  ],
  "coinOutputsBlockCreator": Array [
    Object {
      "blockHeight": 0,
      "condition": UnlockhashCondition {
        "type": 1,
        "unlockhash": "015a080a9259b9d4aaa550e2156f49b1a79a64c7ea463d810d4493e8242e6791584fbdac553e6f",
      },
      "id": "a3c8f44d64c0636018a929d2caeec09fb9698bfdcbfa3a8225585a51e09ee563",
      "spent": false,
      "txId": "eabb72ecddaeb524a172eb29e9010fc07ba5a13830da0add0593a0950e0d0ae4",
      "value": "100000000",
    },
  ],
  "confirmedBlockstakeBalance": "3000",
  "confirmedCoinBalance": "100000070",
  "isBlockCreator": true,
  "lastBlockStakeSpent": Object {
    "height": 7,
    "txid": "532d13050f750f137477317985971d84895076e2c24c87670e95b2509d9d16c6",
  },
  "lastCoinSpent": Object {
    "height": 0,
    "txid": "",
  },
  "minerPayouts": Array [
    Object {
      "blockId": "114b713b789c1d2c30d33cc3b1861eceb86c3c99031422e0f575bf482fbfa10d",
      "id": "8eb9799436045b37ac602dbf9017dd1a75f05c49316d04a960cb49c29e56f290",
      "spent": false,
      "unlockhash": "015a080a9259b9d4aaa550e2156f49b1a79a64c7ea463d810d4493e8242e6791584fbdac553e6f",
      "value": "10",
    },
    Object {
      "blockId": "17a694ea2e45a5a7f2e6b5410a577952d8e93eb91a85d7ddfdb7aa6a906d45a5",
      "id": "a23129f85650a2327a7c30b6f738a067d9d77eebb2a5d4ad1beb8603ce3c66cd",
      "spent": false,
      "unlockhash": "015a080a9259b9d4aaa550e2156f49b1a79a64c7ea463d810d4493e8242e6791584fbdac553e6f",
      "value": "10",
    },
    Object {
      "blockId": "5f56c6d62b4d5b343d757f4e92bd417fa5b9a20102b0ae3d79c4dc2af96340ae",
      "id": "5285b4ccf01ba1ba9b42dab14710cf02d570170cf6fd604a83e9ed93dca6de31",
      "spent": false,
      "unlockhash": "015a080a9259b9d4aaa550e2156f49b1a79a64c7ea463d810d4493e8242e6791584fbdac553e6f",
      "value": "10",
    },
    Object {
      "blockId": "987ea3ce6eb77fff92381d6f660fb4818865b5e09d55062628df7faa0ed53bb3",
      "id": "2579621212a8509033bf8140dc5a4edad7462bcfd3ff8d74259ba87e304bfd58",
      "spent": false,
      "unlockhash": "015a080a9259b9d4aaa550e2156f49b1a79a64c7ea463d810d4493e8242e6791584fbdac553e6f",
      "value": "10",
    },
    Object {
      "blockId": "9d2cdb8b352a9a5c5282efa333cf0f526cb92f2ed6dffbd11cf41b3b80ec5c8a",
      "id": "6e4f409b5b58929174c8f980740baa3dacffb7a4e1e6af93d709668c873339cf",
      "spent": false,
      "unlockhash": "015a080a9259b9d4aaa550e2156f49b1a79a64c7ea463d810d4493e8242e6791584fbdac553e6f",
      "value": "10",
    },
    Object {
      "blockId": "cb4022ea8c44eb817b159822d0ca42d6c7b6f832d6e932259e9687338978265e",
      "id": "b59a1cb70415b56d47627a12ad7c8cc6e603153083c9d062c9a62deb8ba3a8c9",
      "spent": false,
      "unlockhash": "015a080a9259b9d4aaa550e2156f49b1a79a64c7ea463d810d4493e8242e6791584fbdac553e6f",
      "value": "10",
    },
    Object {
      "blockId": "f9b8497660d72cbe724c1128dc4dd27a78f17171e4f5547174956fa139049233",
      "id": "c22eabdb39943440266a9ea45409858bcff3060c22ab34c95bb0e5be54311c6e",
      "spent": false,
      "unlockhash": "015a080a9259b9d4aaa550e2156f49b1a79a64c7ea463d810d4493e8242e6791584fbdac553e6f",
      "value": "10",
    },
  ],
}
`;
